udf's for spark now work.

--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -7,23 +7,22 @@
    "outputs": [],
    "source": [
     "import findspark\n",
-    "# my local spark install\n",
     "findspark.init('/Users/dreyco676/spark-1.6.0-bin-hadoop2.6/')\n",
     "\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
+    "import langid\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "import string\n",
+    "from pyspark.sql.types import *\n",
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
     "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.functions import udf\n",
-    "from pyspark.sql.types import *\n",
-    "from nltk.stem.wordnet import WordNetLemmatizer\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk import pos_tag\n",
-    "import string\n",
-    "import re\n",
-    "import langid\n",
+    "from nltk import pos_tag, word_tokenize\n",
     "\n",
     "sc = pyspark.SparkContext(appName=\"tweet_classifier\")\n",
-    "sqlContext = SQLContext(sc)\n"
+    "sqlContext = SQLContext(sc)"
    ]
   },
   {
@@ -39,7 +38,7 @@
     "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
     "training = garantee_col.map(lambda p: (p[0], p[1].strip()))\n",
     "# Create DataFrame\n",
-    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])\n"
+    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])"
    ]
   },
   {
@@ -48,10 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use langid module to classify the language to make sure we are applying the correct cleanup actions for English\n",
+    "# Use langid module to classify the language to make sure we are applying the correct cleanup actions\n",
     "# https://github.com/saffsd/langid.py\n",
-    "\n",
-    "\n",
     "def check_lang(data_str):\n",
     "    predict_lang = langid.classify(data_str)\n",
     "    if predict_lang[1] >= .9:\n",
@@ -60,7 +57,7 @@
     "        language = 'NA'\n",
     "    return language\n",
     "\n",
-    "check_lang_udf = udf(check_lang, StringType())\n"
+    "check_lang_udf = udf(check_lang, StringType())"
    ]
   },
   {
@@ -73,8 +70,6 @@
     "# by all natural language processing tools.\n",
     "# Reduces Dimensionality\n",
     "# removes stop words of a single Tweets (cleaned_str/row/document)\n",
-    "\n",
-    "\n",
     "def remove_stops(data_str):\n",
     "    # expects a string\n",
     "    stops = set(stopwords.words(\"english\"))\n",
@@ -91,7 +86,7 @@
     "            list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "remove_stops_udf = udf(remove_stops, StringType())\n"
+    "remove_stops_udf = udf(remove_stops, StringType())"
    ]
   },
   {
@@ -102,8 +97,6 @@
    "source": [
     "# catch-all to remove other 'words' that I felt didn't add a lot of value\n",
     "# Reduces Dimensionality, gets rid of a lot of unique urls\n",
-    "\n",
-    "\n",
     "def remove_features(data_str):\n",
     "    # compile regex\n",
     "    url_re = re.compile('https?://(www.)?\\w+\\.\\w+(/\\w+)*/?')\n",
@@ -134,11 +127,11 @@
     "            if alpha_num_re.match(word) and len(word) > 2:\n",
     "                cleaned_str = cleaned_str + ' ' + word\n",
     "            else:\n",
-    "                cleaned_str += ' '\n",
+    "                cleaned_str = cleaned_str + ' '\n",
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "remove_features_udf = udf(remove_features, StringType())\n"
+    "remove_features_udf = udf(remove_features, StringType())"
    ]
   },
   {
@@ -147,13 +140,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Process of classifying words into their parts of speech and labeling them accordingly is known as part-of-speech \n",
-    "# tagging, POS-tagging, or simply tagging. Parts of speech are also known as word classes or lexical categories. The \n",
-    "# collection of tags used for a particular task is known as a tagset. Our emphasis in this chapter is on exploiting \n",
-    "# tags, and tagging text automatically.\n",
-    "# http://www.nltk.org/book/ch05.html\n",
-    "\n",
-    "\n",
     "def tag_and_remove(data_str):\n",
     "    cleaned_str = ' '\n",
     "    # noun tags\n",
@@ -192,8 +178,6 @@
     "\n",
     "# http://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html\n",
     "# lemmatization of a single Tweets (cleaned_str/row/document)\n",
-    "\n",
-    "\n",
     "def lemmatize(data_str):\n",
     "    # expects a string\n",
     "    list_pos = 0\n",
