renamed zip files

--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -175,7 +175,7 @@
     "            \n",
     "    return cleaned_str\n",
     "\n",
-    "tag_and_remove_udf = udf(tag_and_remove, StringType())"
+    "tag_and_remove_udf = udf(tag_and_remove, StringType())\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "lemmatize_udf = udf(lemm_verbs, StringType())"
+    "lemmatize_udf = udf(lemmatize, StringType())\n"
    ]
   },
   {
@@ -219,8 +219,8 @@
    "outputs": [],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
-    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(\"tweet\"))\n",
-    "en_df = lang_df.filter(lang_df[\"lang\"] == 'en')"
+    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(training_df[\"tweet\"]))\n",
+    "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "# remove stop words to reduce dimensionality\n",
-    "rm_stops_df = en_df.withColumn(\"tweet\", remove_stops_udf(\"tweet\"))"
+    "rm_stops_df = en_df.withColumn(\"tweet\", remove_stops_udf(en_df[\"tweet\"]))"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "# remove other non essential words, think of it as my personal stop word list\n",
-    "rm_features_df = rm_stops_df.withColumn(\"tweet\", remove_features_udf(\"tweet\"))"
+    "rm_features_df = rm_stops_df.withColumn(\"tweet\", remove_features_udf(rm_stops_df[\"tweet\"]))"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "outputs": [],
    "source": [
     "# tag the words remaining and keep only Nouns, Verbs and Adjectives\n",
-    "tagged_df = rm_features_df.withColumn(\"tweet\", tag_and_remove_udf(\"tweet\"))"
+    "tagged_df = rm_features_df.withColumn(\"tweet\", tag_and_remove_udf(rm_features_df[\"tweet\"]))"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"tweet\", lemmatize_udf(\"tweet\"))"
+    "lemm_df = tagged_df.withColumn(\"tweet\", lemmatize_udf(tagged_df[\"tweet\"]))"
    ]
   }
  ],
