--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -7,19 +7,20 @@
    "outputs": [],
    "source": [
     "import findspark\n",
+    "# my local spark install\n",
     "findspark.init('/Users/dreyco676/spark-1.6.0-bin-hadoop2.6/')\n",
     "\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
-    "import langid\n",
-    "from nltk.stem.wordnet import WordNetLemmatizer\n",
-    "import string\n",
-    "from pyspark.sql.types import *\n",
-    "import re\n",
-    "from nltk.corpus import stopwords\n",
     "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.functions import udf\n",
-    "from nltk import pos_tag, word_tokenize\n",
+    "from pyspark.sql.types import *\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import pos_tag\n",
+    "import string\n",
+    "import re\n",
+    "import langid\n",
     "\n",
     "sc = pyspark.SparkContext(appName=\"tweet_classifier\")\n",
     "sqlContext = SQLContext(sc)"
@@ -36,7 +37,7 @@
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
     "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
-    "training = garantee_col.map(lambda p: (p[0], p[1].strip()))\n",
+    "training = garantee_col.map(lambda p: (p[0], p[1]))\n",
     "# Create DataFrame\n",
     "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])"
    ]
@@ -47,8 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use langid module to classify the language to make sure we are applying the correct cleanup actions\n",
+    "# Use langid module to classify the language to make sure we are applying the correct cleanup actions for English\n",
     "# https://github.com/saffsd/langid.py\n",
+    "\n",
+    "\n",
     "def check_lang(data_str):\n",
     "    predict_lang = langid.classify(data_str)\n",
     "    if predict_lang[1] >= .9:\n",
@@ -70,6 +73,8 @@
     "# by all natural language processing tools.\n",
     "# Reduces Dimensionality\n",
     "# removes stop words of a single Tweets (cleaned_str/row/document)\n",
+    "\n",
+    "\n",
     "def remove_stops(data_str):\n",
     "    # expects a string\n",
     "    stops = set(stopwords.words(\"english\"))\n",
@@ -97,6 +102,8 @@
    "source": [
     "# catch-all to remove other 'words' that I felt didn't add a lot of value\n",
     "# Reduces Dimensionality, gets rid of a lot of unique urls\n",
+    "\n",
+    "\n",
     "def remove_features(data_str):\n",
     "    # compile regex\n",
     "    url_re = re.compile('https?://(www.)?\\w+\\.\\w+(/\\w+)*/?')\n",
@@ -127,7 +134,7 @@
     "            if alpha_num_re.match(word) and len(word) > 2:\n",
     "                cleaned_str = cleaned_str + ' ' + word\n",
     "            else:\n",
-    "                cleaned_str = cleaned_str + ' '\n",
+    "                cleaned_str += ' '\n",
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
@@ -140,6 +147,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process of classifying words into their parts of speech and labeling them accordingly is known as part-of-speech \n",
+    "# tagging, POS-tagging, or simply tagging. Parts of speech are also known as word classes or lexical categories. The \n",
+    "# collection of tags used for a particular task is known as a tagset. Our emphasis in this chapter is on exploiting \n",
+    "# tags, and tagging text automatically.\n",
+    "# http://www.nltk.org/book/ch05.html\n",
+    "\n",
+    "\n",
     "def tag_and_remove(data_str):\n",
     "    cleaned_str = ' '\n",
     "    # noun tags\n",
@@ -178,6 +192,8 @@
     "\n",
     "# http://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html\n",
     "# lemmatization of a single Tweets (cleaned_str/row/document)\n",
+    "\n",
+    "\n",
     "def lemmatize(data_str):\n",
     "    # expects a string\n",
     "    list_pos = 0\n",
@@ -193,7 +209,7 @@
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "lemmatize_udf = udf(lemm_verbs, StringType())"
+    "lemmatize_udf = udf(lemmatize, StringType())"
    ]
   },
   {
@@ -203,8 +219,8 @@
    "outputs": [],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
-    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(\"tweet\"))\n",
-    "en_df = lang_df.filter(lang_df[\"lang\"] == 'en')"
+    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(training_df[\"tweet\"]))\n",
+    "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")\n"
    ]
   },
   {
@@ -214,7 +230,7 @@
    "outputs": [],
    "source": [
     "# remove stop words to reduce dimensionality\n",
-    "rm_stops_df = en_df.withColumn(\"tweet\", remove_stops_udf(\"tweet\"))"
+    "rm_stops_df = en_df.withColumn(\"stop_tweet\", remove_stops_udf(en_df[\"tweet\"]))\n"
    ]
   },
   {
@@ -224,7 +240,7 @@
    "outputs": [],
    "source": [
     "# remove other non essential words, think of it as my personal stop word list\n",
-    "rm_features_df = rm_stops_df.withColumn(\"tweet\", remove_features_udf(\"tweet\"))"
+    "rm_features_df = rm_stops_df.withColumn(\"feat_tweet\", remove_features_udf(rm_stops_df[\"stop_tweet\"]))"
    ]
   },
   {
@@ -234,7 +250,7 @@
    "outputs": [],
    "source": [
     "# tag the words remaining and keep only Nouns, Verbs and Adjectives\n",
-    "tagged_df = rm_features_df.withColumn(\"tweet\", tag_and_remove_udf(\"tweet\"))"
+    "tagged_df = rm_features_df.withColumn(\"tagged_tweet\", tag_and_remove_udf(rm_features_df[\"feat_tweet\"]))"
    ]
   },
   {
@@ -244,7 +260,19 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"tweet\", lemmatize_udf(\"tweet\"))"
+    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))\n",
+    "lemm_df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
+    "final_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
+    "final_df.show(5)"
    ]
   }
  ],
