filter blank records out

--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -12,7 +12,6 @@
     "\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import *\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
@@ -214,13 +213,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for rows that are completely blank and flag them\n",
+    "\n",
+    "\n",
+    "def check_blanks(data_str):\n",
+    "    empty_str = data_str.isspace()\n",
+    "    return empty_str\n",
+    "\n",
+    "check_blanks_udf = udf(check_blanks, StringType())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
     "lang_df = training_df.withColumn(\"lang\", check_lang_udf(training_df[\"tweet\"]))\n",
-    "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")\n"
+    "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")"
    ]
   },
   {
@@ -230,7 +245,7 @@
    "outputs": [],
    "source": [
     "# remove stop words to reduce dimensionality\n",
-    "rm_stops_df = en_df.withColumn(\"stop_tweet\", remove_stops_udf(en_df[\"tweet\"]))\n"
+    "rm_stops_df = en_df.withColumn(\"stop_tweet\", remove_stops_udf(en_df[\"tweet\"]))"
    ]
   },
   {
@@ -270,7 +285,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select only the columns we care about\n",
+    "col_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
+    "col_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
+    "# filter blanks out\n",
+    "no_blank_df = col_df.filter(lang_df[\"cleaned_tweet\"] != \"en\")\n",
+    "\n",
+    "\n",
     "final_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
     "final_df.show(5)"
    ]
