filter blank records out

--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -275,8 +275,7 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))\n",
-    "lemm_df.show(5)"
+    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))\n"
    ]
   },
   {
@@ -285,7 +284,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "# filter out rows that only contain whitespace\n",
+    "check_blanks_df = lemm_df.withColumn(\"is_blank\", lemmatize_udf(tagged_df[\"lemm_tweet\"]))\n",
+    "no_blanks_df = check_blanks_df.filter(lang_df[\"is_blank\"] == True)"
    ]
   },
   {
@@ -295,12 +296,7 @@
    "outputs": [],
    "source": [
     "# select only the columns we care about\n",
-    "col_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
-    "col_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
-    "# filter blanks out\n",
-    "no_blank_df = col_df.filter(lang_df[\"cleaned_tweet\"] != \"en\")\n",
-    "\n",
-    "\n",
+    "final_df = no_blanks_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
     "final_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
     "final_df.show(5)"
    ]
