--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))\n"
+    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))"
    ]
   },
   {
@@ -285,8 +285,8 @@
    "outputs": [],
    "source": [
     "# filter out rows that only contain whitespace\n",
-    "check_blanks_df = lemm_df.withColumn(\"is_blank\", lemmatize_udf(tagged_df[\"lemm_tweet\"]))\n",
-    "no_blanks_df = check_blanks_df.filter(lang_df[\"is_blank\"] == True)"
+    "check_blanks_df = lemm_df.withColumn(\"is_blank\", check_blanks_udf(lemm_df[\"lemm_tweet\"]))\n",
+    "no_blanks_df = check_blanks_df.filter(check_blanks_df[\"is_blank\"] == True)"
    ]
   },
   {
@@ -296,8 +296,8 @@
    "outputs": [],
    "source": [
     "# select only the columns we care about\n",
-    "final_df = no_blanks_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
-    "final_df.withColumnRenamed(lemm_df[\"lemm_tweet\"], lemm_df[\"cleaned_tweet\"])\n",
+    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"classification\"])\n",
+    "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], final_df[\"cleaned_tweet\"])\n",
     "final_df.show(5)"
    ]
   }
