--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -213,22 +213,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check for rows that are completely blank and flag them\n",
-    "\n",
-    "\n",
-    "def check_blanks(data_str):\n",
-    "    empty_str = data_str.isspace()\n",
-    "    return empty_str\n",
-    "\n",
-    "check_blanks_udf = udf(check_blanks, StringType())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -284,19 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter out rows that only contain whitespace\n",
-    "check_blanks_df = lemm_df.withColumn(\"is_blank\", check_blanks_udf(lemm_df[\"lemm_tweet\"]))\n",
-    "no_blanks_df = check_blanks_df.filter(check_blanks_df[\"is_blank\"] == True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# select only the columns we care about\n",
-    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"classification\"])\n",
+    "final_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
     "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], final_df[\"cleaned_tweet\"])\n",
     "final_df.show(5)"
    ]
