added blank checking

--- a/hadoop/preprocess/Preprocess.ipynb
+++ b/hadoop/preprocess/Preprocess.ipynb
@@ -12,7 +12,6 @@
     "\n",
     "import pyspark\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import *\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
@@ -23,7 +22,7 @@
     "import langid\n",
     "\n",
     "sc = pyspark.SparkContext(appName=\"tweet_classifier\")\n",
-    "sqlContext = SQLContext(sc)\n"
+    "sqlContext = SQLContext(sc)"
    ]
   },
   {
@@ -37,9 +36,9 @@
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
     "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
-    "training = garantee_col.map(lambda p: (p[0], p[1].strip()))\n",
+    "training = garantee_col.map(lambda p: (p[0], p[1]))\n",
     "# Create DataFrame\n",
-    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])\n"
+    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])"
    ]
   },
   {
@@ -60,7 +59,7 @@
     "        language = 'NA'\n",
     "    return language\n",
     "\n",
-    "check_lang_udf = udf(check_lang, StringType())\n"
+    "check_lang_udf = udf(check_lang, StringType())"
    ]
   },
   {
@@ -91,7 +90,7 @@
     "            list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "remove_stops_udf = udf(remove_stops, StringType())\n"
+    "remove_stops_udf = udf(remove_stops, StringType())"
    ]
   },
   {
@@ -138,7 +137,7 @@
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "remove_features_udf = udf(remove_features, StringType())\n"
+    "remove_features_udf = udf(remove_features, StringType())"
    ]
   },
   {
@@ -175,7 +174,7 @@
     "            \n",
     "    return cleaned_str\n",
     "\n",
-    "tag_and_remove_udf = udf(tag_and_remove, StringType())\n"
+    "tag_and_remove_udf = udf(tag_and_remove, StringType())"
    ]
   },
   {
@@ -209,7 +208,20 @@
     "        list_pos += 1\n",
     "    return cleaned_str\n",
     "\n",
-    "lemmatize_udf = udf(lemmatize, StringType())\n"
+    "lemmatize_udf = udf(lemmatize, StringType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_blanks(data_str):\n",
+    "    is_blank = str(data_str.isspace())\n",
+    "    return is_blank\n",
+    "\n",
+    "check_blanks_udf = udf(check_blanks, StringType())"
    ]
   },
   {
@@ -230,7 +242,7 @@
    "outputs": [],
    "source": [
     "# remove stop words to reduce dimensionality\n",
-    "rm_stops_df = en_df.withColumn(\"tweet\", remove_stops_udf(en_df[\"tweet\"]))"
+    "rm_stops_df = en_df.withColumn(\"stop_tweet\", remove_stops_udf(en_df[\"tweet\"]))"
    ]
   },
   {
@@ -240,7 +252,7 @@
    "outputs": [],
    "source": [
     "# remove other non essential words, think of it as my personal stop word list\n",
-    "rm_features_df = rm_stops_df.withColumn(\"tweet\", remove_features_udf(rm_stops_df[\"tweet\"]))"
+    "rm_features_df = rm_stops_df.withColumn(\"feat_tweet\", remove_features_udf(rm_stops_df[\"stop_tweet\"]))"
    ]
   },
   {
@@ -250,7 +262,7 @@
    "outputs": [],
    "source": [
     "# tag the words remaining and keep only Nouns, Verbs and Adjectives\n",
-    "tagged_df = rm_features_df.withColumn(\"tweet\", tag_and_remove_udf(rm_features_df[\"tweet\"]))"
+    "tagged_df = rm_features_df.withColumn(\"tagged_tweet\", tag_and_remove_udf(rm_features_df[\"feat_tweet\"]))"
    ]
   },
   {
@@ -260,7 +272,49 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"tweet\", lemmatize_udf(tagged_df[\"tweet\"]))"
+    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove all rows containing only blank spaces\n",
+    "check_blanks_df = lemm_df.withColumn(\"is_blank\", check_blanks_udf(lemm_df[\"lemm_tweet\"]))\n",
+    "no_blanks_df = check_blanks_df.filter(check_blanks_df[\"is_blank\"] == \"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select only the columns we care about\n",
+    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"classification\"])\n",
+    "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], \"cleaned_tweet\")\n",
+    "final_df.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import HashingTF, IDF, Tokenizer\n",
+    "\n",
+    "tokenizer = Tokenizer(inputCol=\"lemm_tweet\", outputCol=\"words\")\n",
+    "wordsData = tokenizer.transform(final_df)\n",
+    "hashingTF = HashingTF(inputCol=\"words\", outputCol=\"rawFeatures\", numFeatures=20)\n",
+    "featurizedData = hashingTF.transform(wordsData)\n",
+    "idf = IDF(inputCol=\"rawFeatures\", outputCol=\"features\")\n",
+    "idfModel = idf.fit(featurizedData)\n",
+    "rescaledData = idfModel.transform(featurizedData)\n",
+    "for features_label in rescaledData.select(\"features\", \"label\").take(3):\n",
+    "    print(features_label)"
    ]
   }
  ],
