--- a/hadoop/preprocess/PySpark.ipynb
+++ b/hadoop/preprocess/PySpark.ipynb
@@ -270,8 +270,27 @@
    "source": [
     "# select only the columns we care about\n",
     "final_df = lemm_df.select(lemm_df[\"lemm_tweet\"], lemm_df[\"classification\"])\n",
-    "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], final_df[\"cleaned_tweet\"])\n",
-    "final_df.show(5)"
+    "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], \"cleaned_tweet\")\n",
+    "final_df.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import HashingTF, IDF, Tokenizer\n",
+    "\n",
+    "tokenizer = Tokenizer(inputCol=\"lemm_tweet\", outputCol=\"words\")\n",
+    "wordsData = tokenizer.transform(final_df)\n",
+    "hashingTF = HashingTF(inputCol=\"words\", outputCol=\"rawFeatures\", numFeatures=20)\n",
+    "featurizedData = hashingTF.transform(wordsData)\n",
+    "idf = IDF(inputCol=\"rawFeatures\", outputCol=\"features\")\n",
+    "idfModel = idf.fit(featurizedData)\n",
+    "rescaledData = idfModel.transform(featurizedData)\n",
+    "for features_label in rescaledData.select(\"features\", \"label\").take(3):\n",
+    "    print(features_label)"
    ]
   }
  ],
