added TF IDF transformation

--- a/hadoop/preprocess/Extract_Features.ipynb
+++ b/hadoop/preprocess/Extract_Features.ipynb
@@ -16,7 +16,7 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.ml.feature import HashingTF, IDF, Tokenizer\n",
     "\n",
-    "sc = pyspark.SparkContext(appName=\"tweet_classifier\")\n",
+    "sc = pyspark.SparkContext()\n",
     "sqlContext = SQLContext(sc)"
    ]
   },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +74,22 @@
     "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
     "unclassified = garantee_col.map(lambda p: (p[0], p[1]))\n",
     "# Create DataFrame\n",
-    "unclassified_df = sqlContext.createDataFrame(training, [\"tweet\", \"tweet_id\"])"
+    "unclassified_df = sqlContext.createDataFrame(unclassified, [\"tweet\", \"tweet_id\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row(features=SparseVector(20, {6: 1.2623, 8: 1.9547, 10: 1.6553, 11: 2.2622, 16: 1.2139}), tweet_id='681506150144196608')\nRow(features=SparseVector(20, {2: 1.2441, 6: 1.2623, 8: 0.9773, 10: 0.8276, 11: 2.2622, 15: 1.104}), tweet_id='681505725168877568')\nRow(features=SparseVector(20, {1: 1.2012, 5: 0.8662, 7: 1.1856, 9: 1.0892, 17: 5.0913, 18: 1.1581}), tweet_id='681504863537213443')\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = Tokenizer(inputCol=\"tweet\", outputCol=\"words\")\n",
     "wordsData = tokenizer.transform(unclassified_df)\n",
