--- a/hadoop/preprocess/Preprocess.ipynb
+++ b/hadoop/preprocess/Preprocess.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "# Load a text file and convert each line to a Row.\n",
+    "# TODO get tweetids\n",
     "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/classified_tweets.txt\")\n",
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
