--- a/hadoop/preprocess/Preprocess.ipynb
+++ b/hadoop/preprocess/Preprocess.ipynb
@@ -36,10 +36,10 @@
     "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/classified_tweets.txt\")\n",
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
-    "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
-    "training = garantee_col.map(lambda p: (p[0], p[1]))\n",
+    "garantee_col = parts.filter(lambda l: len(l) == 3)\n",
+    "training = garantee_col.map(lambda p: (p[0], p[1], p[2]))\n",
     "# Create DataFrame\n",
-    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])"
+    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"tweetid\", \"classification\"])"
    ]
   },
   {
@@ -294,9 +294,10 @@
    "outputs": [],
    "source": [
     "# select only the columns we care about\n",
-    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"classification\"])\n",
+    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"tweetid\"], no_blanks_df[\"classification\"])\n",
     "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], \"cleaned_tweet\")\n",
-    "final_df.collect()"
+    "save_format = final_df.map(lambda row: str(row[0]+'\\t'+row[1]+'\\t'+row[2]))\n",
+    "save_format.saveAsTextFile('cleaned_training/')\n"
    ]
   }
  ],
