added training with tweetids

--- a/hadoop/preprocess/Preprocess.ipynb
+++ b/hadoop/preprocess/Preprocess.ipynb
@@ -297,7 +297,7 @@
     "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"tweetid\"], no_blanks_df[\"classification\"])\n",
     "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], \"cleaned_tweet\")\n",
     "save_format = final_df.map(lambda row: str(row[0]+'\\t'+row[1]+'\\t'+row[2]))\n",
-    "save_format.saveAsTextFile('cleaned_training/')\n"
+    "save_format.saveAsTextFile('cleaned_training/')"
    ]
   }
  ],
