updated ml pipeline

--- a/hadoop/classify/naive_bayes.ipynb
+++ b/hadoop/classify/naive_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,10 @@
     "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.ml.feature import HashingTF, IDF, Tokenizer\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.classification import NaiveBayes\n",
+    "from pyspark.ml.feature import HashingTF, Tokenizer\n",
+    "from pyspark.sql import Row\n",
     "\n",
     "sc = pyspark.SparkContext()\n",
     "sqlContext = SQLContext(sc)"
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,47 +34,64 @@
     "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/cleaned_training.txt\")\n",
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
-    "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
-    "training = garantee_col.map(lambda p: (p[0], p[1]))\n",
+    "garantee_col = parts.filter(lambda l: len(l) == 3)\n",
+    "training = garantee_col.map(lambda p: (p[0], p[1], p[2]))\n",
     "# Create DataFrame\n",
-    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"classification\"])"
+    "text_label_df = sqlContext.createDataFrame(training, [\"text\", \"id\", \"text_label\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+--------------------+-----+\n|                id|                text|label|\n+------------------+--------------------+-----+\n|514511437985611776|best option manov...|  0.0|\n|492887601045467137|curated list awes...|  0.0|\n|464730495213768704|python data analy...|  0.0|\n|443215773168066560|checked text spee...|  0.0|\n|443004371425849344|openscience pytho...|  0.0|\n+------------------+--------------------+-----+\nonly showing top 5 rows\n\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load a text file and convert each line to a Row.\n",
-    "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/cleaned_unclassified.txt\")\n",
-    "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
-    "# Filter bad rows out\n",
-    "garantee_col = parts.filter(lambda l: len(l) == 2)\n",
-    "unclassified = garantee_col.map(lambda p: (p[0], p[1]))\n",
-    "# Create DataFrame\n",
-    "unclassified_df = sqlContext.createDataFrame(unclassified, [\"tweet\", \"tweet_id\"])"
+    "# convert the text label into a numeric one\n",
+    "def numeric_label(data_str):\n",
+    "    lower_str = data_str.lower()\n",
+    "    if lower_str == 'python':\n",
+    "        label = 0.0\n",
+    "    elif lower_str == 'hadoop':\n",
+    "        label = 1.0\n",
+    "    elif lower_str == 'datasci':\n",
+    "        label = 2.0\n",
+    "    else:\n",
+    "        label = 3.0\n",
+    "    return label\n",
+    "\n",
+    "numeric_label_udf = udf(numeric_label, DoubleType())\n",
+    "\n",
+    "num_label_df = text_label_df.withColumn(\"label\", numeric_label_udf(text_label_df['text_label']))\n",
+    "training_df = num_label_df.select(num_label_df['id'], num_label_df['text'], num_label_df['label'])\n",
+    "training_df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NaiveBayes' object has no attribute 'pi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-8bd721b5aa81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Fit the pipeline to training documents.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mnb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NaiveBayes' object has no attribute 'pi'"
+     ]
+    }
+   ],
    "source": [
-    "from pyspark.ml import Pipeline\n",
-    "from pyspark.ml.classification import NaiveBayes\n",
-    "from pyspark.ml.feature import HashingTF, Tokenizer\n",
-    "from pyspark.sql import Row\n",
-    "\n",
-    "# Prepare training documents from a list of (id, text, label) tuples.\n",
-    "LabeledDocument = Row(\"id\", \"text\", \"label\")\n",
-    "training = sqlContext.createDataFrame([\n",
-    "    (0L, \"a b c d e spark\", 1.0),\n",
-    "    (1L, \"b d\", 0.0),\n",
-    "    (2L, \"spark f g h\", 1.0),\n",
-    "    (3L, \"hadoop mapreduce\", 0.0)], [\"id\", \"text\", \"label\"])\n",
-    "\n",
     "# Configure an ML pipeline, which consists of tree stages: tokenizer, hashingTF, and lr.\n",
     "tokenizer = Tokenizer(inputCol=\"text\", outputCol=\"words\")\n",
     "hashingTF = HashingTF(inputCol=tokenizer.getOutputCol(), outputCol=\"features\")\n",
@@ -78,20 +99,9 @@
     "pipeline = Pipeline(stages=[tokenizer, hashingTF, nb])\n",
     "\n",
     "# Fit the pipeline to training documents.\n",
-    "model = pipeline.fit(training)\n",
-    "\n",
-    "# Prepare test documents, which are unlabeled (id, text) tuples.\n",
-    "test = sqlContext.createDataFrame([\n",
-    "    (4L, \"spark i j k\"),\n",
-    "    (5L, \"l m n\"),\n",
-    "    (6L, \"mapreduce spark\"),\n",
-    "    (7L, \"apache hadoop\")], [\"id\", \"text\"])\n",
-    "\n",
-    "# Make predictions on test documents and print columns of interest.\n",
-    "prediction = model.transform(test)\n",
-    "selected = prediction.select(\"id\", \"text\", \"prediction\")\n",
-    "for row in selected.collect():\n",
-    "    print(row)"
+    "model = pipeline.fit(training_df)\n",
+    "model.pi\n",
+    "model.theta"
    ]
   },
   {
@@ -100,30 +110,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import Row\n",
-    "from pyspark.mllib.linalg import Vectors\n",
+    "# Prepare test documents, which are unlabeled (id, text) tuples.\n",
+    "test_df = 0\n",
     "\n",
-    "df = sqlContext.createDataFrame([\n",
-    "    ...     Row(label=0.0, features=Vectors.dense([0.0, 0.0])),\n",
-    "    ...     Row(label=0.0, features=Vectors.dense([0.0, 1.0])),\n",
-    "    ...     Row(label=1.0, features=Vectors.dense([1.0, 0.0]))])\n",
-    "\n",
-    "nb = NaiveBayes(smoothing=1.0, modelType=\"multinomial\")\n",
-    "model = nb.fit(df)\n",
-    "model.pi\n",
-    "\n",
-    "model.theta\n",
-    "\n",
-    "test0 = sc.parallelize([Row(features=Vectors.dense([1.0, 0.0]))]).toDF()\n",
-    "result = model.transform(test0).head()\n",
+    "# Make predictions on test documents and print columns of interest.\n",
+    "result = model.transform(test_df)\n",
     "result.prediction\n",
     "\n",
     "result.probability\n",
     "\n",
     "result.rawPrediction\n",
     "\n",
-    "test1 = sc.parallelize([Row(features=Vectors.sparse(2, [0], [1.0]))]).toDF()\n",
-    "model.transform(test1).head().prediction"
+    "selected = result.select(\"id\", \"text\", \"prediction\")\n",
+    "for row in selected.collect():\n",
+    "    print(row)"
    ]
   }
  ],
