--- a/hadoop/preprocess/Preprocess.ipynb
+++ b/hadoop/preprocess/Preprocess.ipynb
@@ -21,7 +21,7 @@
     "import re\n",
     "import langid\n",
     "\n",
-    "sc = pyspark.SparkContext(appName=\"tweet_classifier\")\n",
+    "sc = pyspark.SparkContext()\n",
     "sqlContext = SQLContext(sc)"
    ]
   },
@@ -33,13 +33,13 @@
    "source": [
     "# Load a text file and convert each line to a Row.\n",
     "# TODO get tweetids\n",
-    "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/classified_tweets.txt\")\n",
+    "lines = sc.textFile(\"/Users/dreyco676/nlp_spark/data/training.txt\")\n",
     "parts = lines.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
     "garantee_col = parts.filter(lambda l: len(l) == 3)\n",
     "training = garantee_col.map(lambda p: (p[0], p[1], p[2]))\n",
     "# Create DataFrame\n",
-    "training_df = sqlContext.createDataFrame(training, [\"tweet\", \"tweetid\", \"classification\"])"
+    "training_df = sqlContext.createDataFrame(training, [\"text\", \"id\", \"label\"])"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "outputs": [],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
-    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(training_df[\"tweet\"]))\n",
+    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(training_df[\"text\"]))\n",
     "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")"
    ]
   },
@@ -243,7 +243,7 @@
    "outputs": [],
    "source": [
     "# remove stop words to reduce dimensionality\n",
-    "rm_stops_df = en_df.withColumn(\"stop_tweet\", remove_stops_udf(en_df[\"tweet\"]))"
+    "rm_stops_df = en_df.withColumn(\"stop_text\", remove_stops_udf(en_df[\"text\"]))"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "# remove other non essential words, think of it as my personal stop word list\n",
-    "rm_features_df = rm_stops_df.withColumn(\"feat_tweet\", remove_features_udf(rm_stops_df[\"stop_tweet\"]))"
+    "rm_features_df = rm_stops_df.withColumn(\"feat_text\", remove_features_udf(rm_stops_df[\"stop_text\"]))"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "outputs": [],
    "source": [
     "# tag the words remaining and keep only Nouns, Verbs and Adjectives\n",
-    "tagged_df = rm_features_df.withColumn(\"tagged_tweet\", tag_and_remove_udf(rm_features_df[\"feat_tweet\"]))"
+    "tagged_df = rm_features_df.withColumn(\"tagged_text\", tag_and_remove_udf(rm_features_df[\"feat_text\"]))"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "outputs": [],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
-    "lemm_df = tagged_df.withColumn(\"lemm_tweet\", lemmatize_udf(tagged_df[\"tagged_tweet\"]))"
+    "lemm_df = tagged_df.withColumn(\"lemm_text\", lemmatize_udf(tagged_df[\"tagged_text\"]))"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "# remove all rows containing only blank spaces\n",
-    "check_blanks_df = lemm_df.withColumn(\"is_blank\", check_blanks_udf(lemm_df[\"lemm_tweet\"]))\n",
+    "check_blanks_df = lemm_df.withColumn(\"is_blank\", check_blanks_udf(lemm_df[\"lemm_text\"]))\n",
     "no_blanks_df = check_blanks_df.filter(check_blanks_df[\"is_blank\"] == \"False\")"
    ]
   },
@@ -294,8 +294,8 @@
    "outputs": [],
    "source": [
     "# select only the columns we care about\n",
-    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_tweet\"], no_blanks_df[\"tweetid\"], no_blanks_df[\"classification\"])\n",
-    "final_df.withColumnRenamed(final_df[\"lemm_tweet\"], \"cleaned_tweet\")\n",
+    "final_df = no_blanks_df.select(no_blanks_df[\"lemm_text\"], no_blanks_df[\"id\"], no_blanks_df[\"label\"])\n",
+    "final_df.withColumnRenamed(final_df[\"lemm_text\"], \"cleaned_text\")\n",
     "save_format = final_df.map(lambda row: str(row[0]+'\\t'+row[1]+'\\t'+row[2]))\n",
     "save_format.saveAsTextFile('cleaned_training/')"
    ]
